Replace the Gnocchi dispatcher by a publisher
This removes the deprecated Gnocchi dispatcher and replaces it by its
equivalent publisher.

Change-Id: Ie44baf20ccb8de5794f5f0c3d4717f7e56afa63b

--- a/setup.cfg
+++ b/setup.cfg
@@ -247,7 +247,7 @@ ceilometer.sample.publisher =
     kafka = ceilometer.publisher.kafka_broker:KafkaBrokerPublisher
     http = ceilometer.publisher.http:HttpPublisher
     https = ceilometer.publisher.http:HttpPublisher
-    gnocchi = ceilometer.publisher.direct:DirectPublisher
+    gnocchi = ceilometer.publisher.gnocchi:GnocchiPublisher
     database = ceilometer.publisher.direct:DirectPublisher
     file_alt = ceilometer.publisher.direct:DirectPublisher
     http_alt = ceilometer.publisher.direct:DirectPublisher
@@ -261,7 +261,7 @@ ceilometer.event.publisher =
     kafka = ceilometer.publisher.kafka_broker:KafkaBrokerPublisher
     http = ceilometer.publisher.http:HttpPublisher
     https = ceilometer.publisher.http:HttpPublisher
-    gnocchi = ceilometer.publisher.direct:DirectPublisher
+    gnocchi = ceilometer.publisher.gnocchi:GnocchiPublisher
     database = ceilometer.publisher.direct:DirectPublisher
     file_alt = ceilometer.publisher.direct:DirectPublisher
     http_alt = ceilometer.publisher.direct:DirectPublisher
@@ -290,12 +290,10 @@ ceilometer.dispatcher.meter =
     database = ceilometer.dispatcher.database:MeterDatabaseDispatcher
     file = ceilometer.dispatcher.file:FileDispatcher
     http = ceilometer.dispatcher.http:HttpDispatcher
-    gnocchi = ceilometer.dispatcher.gnocchi:GnocchiDispatcher
 
 ceilometer.dispatcher.event =
     file = ceilometer.dispatcher.file:FileDispatcher
     http = ceilometer.dispatcher.http:HttpDispatcher
-    gnocchi = ceilometer.dispatcher.gnocchi:GnocchiDispatcher
 
 network.statistics.drivers =
     opendaylight = ceilometer.network.statistics.opendaylight.driver:OpenDayLightDriver
